# decodepipe

./: README.md  environment.yml  pyproject.toml  run_decodingpipe.py
Example Salmonella SL1344/: Codon-tRNAs decoding table E. coli.xlsx  SL1344 - 5 clusters - ref decoding pipeline.xlsx
Example Salmonella SL1344/Expected output/: 01_CodonTables_byCluster__RCU_and_RCUdevZ.xlsx  02_HeatmapMatrices.xlsx  04_Supp_GeneLevel_WCvsWobble.xlsx
decodingpipe/: constants.py  fasta.py  pipeline.py  plotting.py  precomputed.py  tables.py  utils.py
